# bulk

./: CMakeLists.txt  main.cpp
src/: controlsData.cpp  dataStream.cpp  main.cpp
src/includes/: controlsData.hpp  dataStorage.hpp  dataStream.hpp  procesData.hpp  writeFaile.hpp
src/models/: dataStorage.cpp  dataStream.cpp  procesData.cpp  writeFaile.cpp
